// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkBannerAlert should accept userland styling 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
      "width": 4,
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly when not shown 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": 0.01,
      "opacity": 0,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with animateOnEnter 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": 0.01,
      "opacity": 0,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with animateOnLeave 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with children provided (expandable) 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        accessibilityLabel="Expand"
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Object {
                "marginStart": 8,
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "borderRadius": 0,
            "height": 0.01,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Array [
              Object {
                "paddingBottom": 16,
                "paddingHorizontal": 24,
              },
              Object {
                "left": 0,
                "opacity": 0,
                "position": "absolute",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingBottom": 16,
                "paddingHorizontal": 24,
              },
              Object {
                "height": null,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        accessibilityLabel="Expand"
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Object {
                "marginStart": 8,
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "borderRadius": 0,
            "height": 0.01,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Array [
              Object {
                "paddingBottom": 16,
                "paddingHorizontal": 24,
              },
              Object {
                "left": 0,
                "opacity": 0,
                "position": "absolute",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingBottom": 16,
                "paddingHorizontal": 24,
              },
              Object {
                "height": null,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with dismissable 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
        <View
          accessibilityLabel="Dismiss"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginStart": 8,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "minHeight": 32,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "rgb(82, 76, 97)",
                    "fontFamily": "sans-serif",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                  },
                  Object {
                    "fontFamily": "sans-serif-medium",
                  },
                  Array [
                    Object {
                      "color": "rgb(0, 178, 214)",
                    },
                  ],
                ]
              }
            >
              Dismiss
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
        <View
          accessibilityLabel="Dismiss"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginStart": 8,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "minHeight": 32,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "rgb(82, 76, 97)",
                    "fontFamily": "sans-serif",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                  },
                  Object {
                    "fontFamily": "sans-serif-medium",
                  },
                  Array [
                    Object {
                      "color": "rgb(0, 178, 214)",
                    },
                  ],
                ]
              }
            >
              Dismiss
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with expanded 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        accessibilityLabel="Expand"
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Object {
                "marginStart": 8,
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "borderRadius": 0,
            "height": null,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Array [
              Object {
                "paddingBottom": 16,
                "paddingHorizontal": 24,
              },
              Object {
                "left": 0,
                "opacity": 0,
                "position": "absolute",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingBottom": 16,
                "paddingHorizontal": 24,
              },
              Object {
                "height": null,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        accessibilityLabel="Expand"
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Object {
                "marginStart": 8,
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "borderRadius": 0,
            "height": null,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Array [
              Object {
                "paddingBottom": 16,
                "paddingHorizontal": 24,
              },
              Object {
                "left": 0,
                "opacity": 0,
                "position": "absolute",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingBottom": 16,
                "paddingHorizontal": 24,
              },
              Object {
                "height": null,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with type equal to error 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(255, 84, 82)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          error alert.
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(255, 84, 82)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          error alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with type equal to neutral 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          neutral alert.
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with type equal to success 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(0, 215, 117)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          success alert.
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(0, 215, 117)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          success alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with type equal to warn 1`] = `
<View
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(255, 187, 0)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          warn alert.
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 48,
            "paddingHorizontal": 24,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                },
                Object {
                  "color": "rgb(255, 187, 0)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              Object {},
              Object {
                "flex": 1,
              },
            ]
          }
        >
          warn alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;
